--- a/ex022/fundo005.html
+++ b/ex022/fundo005.html
@@ -3,40 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Posição dos fundos</title>
+    <title>posicionamento</title>
     <style>
-        div.boloco{
+        div.bloco{
             background-image: url(imagens/wallpaper003.jpg);
             height: 200px;
             border: 1px solid black;
             margin: 20px;
             border-radius: 10px;
-        }
-        div#q1{
+       }
+
+        div#q1{       
             background-position: left top;
         }
         div#q2{
-            background-position: left center;
+            background-position: center top;
         }
         div#q3{
-            background-position: right bottom;
+            background-position: right top;
         }
         div#q4{
+            background-position:left center ;
+        }
+        div#q5{
             background-position: center center;
         }
+        div#q6{
+            background-position: right center;
+        }
+        
     </style>
 </head>
 <body>
-    <div class="boloco" id="q1">
+    <div class="bloco" id="q1">
 
     </div>
-    <div class="boloco" id="q2">
+    <div class="bloco" id="q2">
 
     </div>
-    <div class="boloco" id="q3">
+    <div class="bloco" id="q3">
 
     </div>
-    <div class="boloco" id="q4">
+    <div class="bloco" id="q4">
+
+    </div>
+    <div class="bloco" id="q5">
+
+    </div>
+    <div class="bloco" id="q6">
 
     </div>
 </body>
