--- a/ex007/index.html
+++ b/ex007/index.html
@@ -8,6 +8,7 @@
 <body>
     
     <h1>teste de semantica</h1>
+    <h2>lopes</h2>
     <p>
     eu gosto muito de <address>bolo gordo</address> por que vi em um filme
     </p>
