--- a/ex007/index.html
+++ b/ex007/index.html
@@ -9,6 +9,7 @@
     
     <h1>teste de semantica</h1>
     <h2>lopes</h2>
+    <h3>lopes</h3>
     <p>
     eu gosto muito de <address>bolo gordo</address> por que vi em um filme
     </p>
