--- a/projeto-cordel/index.html
+++ b/projeto-cordel/index.html
@@ -69,7 +69,7 @@
 
 
 
-    <section class="imagem">
+    <section class="imagem1">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
