--- a/Projeto-lalamove/index.html
+++ b/Projeto-lalamove/index.html
@@ -23,7 +23,11 @@
         <p>Plataforma de entregas sob demanda</p>
         <button>Começar a usar!</button>
     </section>
-
+    <section id="caixa">
+      <div></div>
+      <div></div>
+      <div></div>
+    </section>
     
 </main>
 </body>
