--- a/Projeto-lalamove/index.html
+++ b/Projeto-lalamove/index.html
@@ -24,9 +24,16 @@
         <button>Começar a usar!</button>
     </section>
     <section id="caixa">
-      <div></div>
-      <div></div>
-      <div></div>
+      <div>
+        <h1>Para Empresas</h1>
+        <p>Gaste menos com logística e entregue no mesmo dia</p>
+        <a href="#">Saiba Mais</a>
+      </div>
+      <div>
+        <h1>Para Voçê</h1>
+        <p></p>
+      </div>
+      <div>3</div>
     </section>
     
 </main>
