--- a/Projeto-lalamove/index.html
+++ b/Projeto-lalamove/index.html
@@ -31,7 +31,8 @@
       </div>
       <div>
         <h1>Para Voçê</h1>
-        <p></p>
+        <p>Peça um veículo sem complicação sempre que precisar</p>
+        <a href="#">Saiba Mais</a>
       </div>
       <div>3</div>
     </section>
