--- a/Projeto-lalamove/index.html
+++ b/Projeto-lalamove/index.html
@@ -34,7 +34,11 @@
         <p>Peça um veículo sem complicação sempre que precisar</p>
         <a href="#">Saiba Mais</a>
       </div>
-      <div>3</div>
+      <div>
+        <h1>Motorista</h1>
+        <p>Entregue com a lalamove e complemente sua renda</p>
+        <a href="#">Dirigir</a>
+      </div>
     </section>
     
 </main>
