--- a/Projeto-lalamove/index.html
+++ b/Projeto-lalamove/index.html
@@ -14,8 +14,8 @@
     <a href="#">Motorista</a>
     <a href="#">Fidelidade</a>
     <a href="#">Empresas</a>
-    <a href="#"><img src="imagens/mundo.png" alt="" class="imgmenu"> Brasil-portugues</a>
-    <a href="#"><img src="imagens/usuario.png" alt="" class="imgmenu"> Entrar</a>
+    <a href="#"><img src="" alt="" class="imgmenu"> Brasil-portugues</a>
+    <a href="#"><img src="" alt="" class="imgmenu"> Entrar</a>
   </nav>   
 <main>
     <section id="cont1">
