--- a/ex023/tabela006.html
+++ b/ex023/tabela006.html
@@ -27,7 +27,7 @@
         }
         div#container{
             overflow-x: auto;
-            background-size: ;
+            background-size: 2;
         }
     </style>
 </head>
