--- a/ex024/iframe002.html
+++ b/ex024/iframe002.html
@@ -17,7 +17,7 @@
 <body>
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, aliquid obcaecati eius pariatur beatae sed delectus dignissimos iste tenetur ratione ex molestiae esse, similique dolores repudiandae aut omnis tempora tempore.</p>
-    <iframe src="pagina001.html" frameborder="0" height="500px" width="500"></iframe>
+    <iframe src="paginasextras/pagina001.html" frameborder="0" height="500px" width="500"></iframe>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae quam omnis culpa. Sequi quidem consectetur earum laboriosam numquam. Rerum tenetur nam modi at. Nostrum dolores asperiores in dolorem placeat deleniti!</p>
 </body>
 </html>
